# RK

./: CMakeLists.txt
.github/workflows/: build.yml
include/: Bookstore.h  Document.h  DocumentVisitor.h  OnlineShop.h
src/: Bookstore.cpp  BookstoreMain.cpp  ConceptualExample.cpp  Document.cpp  DocumentVisitor.cpp  OnlineShop.cpp  OnlineShopMain.cpp  Program.cpp
tests/: BookstoreTest.cpp  BookstoreTests.cpp  DocumentTest.cpp  OnlineShopTest.cpp
